--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 layout: page
 ---
 
-{% include archive.html %}
-
+<section class="aboutme">
+    <div class="post_content">
+        <h1>About Me</h1><br />
+        <p>
+            Cool 하고 Sick 한 개발자가 되고 싶은 YooJun Hong 입니다.
+            <br><br>
+            <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg">
+        </p>
+    </div>
+</section>
