add custom img class for md

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: page
 
 <section class="aboutme">
     <div class="post_content">
-        <h1>About Me</h1><br />
-        <p>
-            Cool 하고 Sick 한 개발자가 되고 싶은 YooJun Hong 입니다.
+        <h1 style="text-align: center;">About Me</h1><br />
+        <p style="text-align: center;">
+            <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg" class="c">
             <br><br>
-            <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg">
+            Cool 하고 Sick 한 개발자가 되고 싶은 YooJun Hong 입니다.
         </p>
     </div>
 </section>
