update about me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: page
     <div class="post_content">
         <h1 style="text-align: center;">About Me</h1><br />
         <p style="text-align: center;">
-            <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg" class="c">
+            <img src="./assets/img/me.jpg" class="i">
+            <em>at Kapadokya 2019</em>
             <br><br>
             Cool 하고 Sick 한 개발자가 되고 싶은 YooJun Hong 입니다.
         </p>
