abtme 에 links 추가

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@ layout: page
             <img src="./assets/img/me.jpg" class="i">
             <em>at Kapadokya 2019</em>
             <br><br>
-            Cool 하고 Sick 한 개발자가 되고 싶은 YooJun Hong 입니다.
+            <em>Cool</em> 하고 <em>Sick</em> 한 개발자가 되고 싶은 <em>YooJun Hong</em> 입니다.
             <br />
             <br />
             <br />
-            <a href="http://github.com/kick-snare/">
+            <br />
+            <br />
+            <br />
+            <br />
+            <span><a href="http://github.com/kick-snare/" >
                 <img src="https://cdn.iconscout.com/icon/free/png-512/github-153-675523.png" class="w" />
-                <em>github</em>
-            </a>
+            </a></span>
+            <span><a href="https://www.notion.so/uzun/uzun-1f029d1ac1454ed9ac4c4ff6c0e11fc2" >
+                <img src="https://miro.medium.com/max/1400/1*aTuWWHnk0-FeyetCxyNCCg.png" class="w" />
+            </a></span>
+            <span><a href="hhttps://www.instagram.com/h_uz99/?hl=ko/" >
+                <img src="https://i.ibb.co/x3kLF3M/CDB655-D9-953-D-4-FD8-BEBD-F709086-F23-F6-1-201-a.jpg" class="w" />
+            </a></span>
         </p>
     </div>
 </section>
