--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: page
             <span><a href="https://www.notion.so/uzun/uzun-1f029d1ac1454ed9ac4c4ff6c0e11fc2" >
                 <img src="https://miro.medium.com/max/1400/1*aTuWWHnk0-FeyetCxyNCCg.png" class="w" />
             </a></span>
-            <span><a href="hhttps://www.instagram.com/h_uz99/?hl=ko/" >
+            <span><a href="https://www.instagram.com/h_uz99/?hl=ko/" >
                 <img src="https://i.ibb.co/x3kLF3M/CDB655-D9-953-D-4-FD8-BEBD-F709086-F23-F6-1-201-a.jpg" class="w" />
             </a></span>
         </p>
