--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: page
     <div class="post_content">
         <h1 style="text-align: center;">About Me</h1><br />
         <p style="text-align: center;">
-            <img src="./assets/img/me.jpg" class="i">
-            <em>at Kapadokya 2019</em>
+            <img src="./images/IMG_2760.jpg" class="i">
+            <em>at Jeju 2020</em>
             <br><br>
             <em>Cool</em> 하고 <em>Sick</em> 한 개발자가 되고 싶은 <em>YooJun Hong</em> 입니다.
             <br />
